[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scene/Player/Character/Player.gd" type="Script" id=1]
[ext_resource path="res://Scene/Player/Character/head.gd" type="Script" id=2]
[ext_resource path="res://Scene/Player/Character/hand.gd" type="Script" id=3]
[ext_resource path="res://Asset/Pointers/32Pointer1.png" type="Texture" id=4]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.6
mid_height = 3.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0392157, 0.435294, 1, 1 )

[sub_resource type="PrismMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.654902, 0, 0, 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.6
height = 3.0

[sub_resource type="CubeMesh" id=7]
size = Vector3( 0.2, 0.2, 1 )

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
albedo_color = Color( 0.94902, 0.713726, 0.239216, 1 )

[sub_resource type="CubeMesh" id=9]
size = Vector3( 0.2, 0.2, 1 )

[sub_resource type="SpatialMaterial" id=10]
flags_unshaded = true
albedo_color = Color( 0.890196, 0.258824, 0.384314, 1 )

[sub_resource type="CubeMesh" id=11]
size = Vector3( 0.2, 0.2, 1 )

[sub_resource type="SpatialMaterial" id=12]
flags_unshaded = true
albedo_color = Color( 0.156863, 0.341176, 0.388235, 1 )

[node name="Player" type="KinematicBody" groups=["Player"]]
collision_layer = 2
script = ExtResource( 1 )
jump_height = 20

[node name="UI" type="CanvasLayer" parent="."]

[node name="Crosshair" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="player_mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
layers = 0
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="player_mesh"]
transform = Transform( -0.5, 4.37114e-08, 0, -4.37114e-08, -0.5, 0, 0, 0, 0.1, 2.98023e-08, -1.25835, -1.09695 )
visible = false
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.839, 0 )
script = ExtResource( 2 )

[node name="Kamera" type="Camera" parent="head"]
current = true
far = 8192.0

[node name="Aim" type="RayCast" parent="head/Kamera"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="ViewportContainer" type="ViewportContainer" parent="head/Kamera"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="head/Kamera/ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="WeaponCam" type="Camera" parent="head/Kamera/ViewportContainer/Viewport"]
cull_mask = 1047554

[node name="ShakeTween" type="Tween" parent="head/Kamera"]

[node name="Shake" type="Timer" parent="head/Kamera"]

[node name="WeaponHolder" type="Spatial" parent="head"]
transform = Transform( 0.996776, 0, 0.0802337, 0, 1, 0, -0.0802337, 0, 0.996776, 0.346364, -0.252277, -0.844414 )

[node name="hand" type="Spatial" parent="head/WeaponHolder"]
transform = Transform( 1, 0, 1.49012e-08, 0, 1, 0, -1.49012e-08, 0, 1, 0, 0, 0 )
script = ExtResource( 3 )
SwayLeft = Vector3( 0, 0.1, 0 )
SwayRight = Vector3( 0, -0.1, 0 )

[node name="Gun1" type="MeshInstance" parent="head/WeaponHolder/hand" groups=["GUN"]]
layers = 2
cast_shadow = 0
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Gun2" type="MeshInstance" parent="head/WeaponHolder/hand" groups=["GUN"]]
layers = 2
cast_shadow = 0
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Gun3" type="MeshInstance" parent="head/WeaponHolder/hand" groups=["GUN"]]
layers = 2
cast_shadow = 0
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="Muzzle" type="Position3D" parent="head/WeaponHolder/hand"]
transform = Transform( 1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, -0.637406 )

[node name="GunTimer" type="Timer" parent="head/WeaponHolder/hand"]

[connection signal="timeout" from="head/Kamera/Shake" to="head" method="_on_Shake_timeout"]
[connection signal="timeout" from="head/WeaponHolder/hand/GunTimer" to="." method="_on_GunTimer_timeout"]
